# surveillance

./: .gitignore  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt
configs/: cameras.yaml  classes.yaml  thresholds.yaml
configs/experiments/: oneclass_dcsass.yaml
scripts/: download_dcsass.sh  download_dcsass_kagglehub.py  download_ucfcrime.md  export_tflite.md
surveillance_tf/: __init__.py
surveillance_tf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
surveillance_tf/data/: __init__.py  dcsass_loader.py  transforms.py  validate.py
surveillance_tf/demo/: coord.py  fusion.py  incidents.py  responder.py  sort_tracker.py  ui_app.py
surveillance_tf/demo/report_templates/: incident.html.j2
surveillance_tf/export/: save_models.py
surveillance_tf/losses/: mil_losses.py
surveillance_tf/models/: efficientdet_tf.py  mil_head.py  movinet_backbone.py
surveillance_tf/train/: eval_mil_ucfcrime.py  train_mil_ucfcrime.py
surveillance_tf/utils/: clip_writer.py  logging.py  metrics.py  paths.py  ring_buffer.py  seed.py  zones.py
tests/: test_dataloaders.py  test_integration.py  test_losses.py
virtual_env_train/: README.md  requirements_train.txt  train.py
